crates/yajlir/src/parser/snapshots/yajlir__parser__lexer__tests__lex_w_comments_case_"__tsimple".snap
---
source: crates/yajlir/src/parser/lexer.rs
expression: "(token, offset, lexer)"
---
(
    Ok(
        StringWithEscapes,
    ),
    10,
    Lexer {
        allow_comments: false,
        validate_utf8: false,
        error: None,
    },
)
