crates/yajlir/src/parser/snapshots/yajlir__parser__lexer__tests__lex_w_comments_case_"__u00++".snap
---
source: crates/yajlir/src/parser/lexer.rs
expression: "(token, offset, lexer)"
---
(
    Ok(
        Error,
    ),
    5,
    Lexer {
        allow_comments: false,
        validate_utf8: false,
        error: Some(
            StringInvalidHexChar,
        ),
    },
)
